; ModuleID = '/home/carl/AnghaBench/HandBrake/libhb/extr_common.c_hb_list_empty.c'
source_filename = "/home/carl/AnghaBench/HandBrake/libhb/extr_common.c_hb_list_empty.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @hb_list_empty(i32** %0) #0 {
  %2 = alloca i32**, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32** %0, i32*** %2, align 8
  %5 = load i32**, i32*** %2, align 8
  %6 = load i32*, i32** %5, align 8
  store i32* %6, i32** %3, align 8
  br label %7

7:                                                ; preds = %11, %1
  %8 = load i32*, i32** %3, align 8
  %9 = call i32* @hb_list_item(i32* %8, i32 0)
  store i32* %9, i32** %4, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %11, label %16

11:                                               ; preds = %7
  %12 = load i32*, i32** %3, align 8
  %13 = load i32*, i32** %4, align 8
  %14 = call i32 @hb_list_rem(i32* %12, i32* %13)
  %15 = call i32 @hb_buffer_close(i32** %4)
  br label %7

16:                                               ; preds = %7
  %17 = load i32**, i32*** %2, align 8
  %18 = call i32 @hb_list_close(i32** %17)
  ret void
}

declare dso_local i32* @hb_list_item(i32*, i32) #1

declare dso_local i32 @hb_list_rem(i32*, i32*) #1

declare dso_local i32 @hb_buffer_close(i32**) #1

declare dso_local i32 @hb_list_close(i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
